--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
     "node-global-storage": "^2.0.0",
+    "nodemon": "^3.1.4",
     "uuid": "^9.0.0"
   }
 }
